crates/pane-tui/src/ui/snapshots/pane__ui__tests_workspace_bar__ws_bar_long_workspace_names.snap
---
source: crates/pane-tui/src/ui/tests_workspace_bar.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  my-very-long-work...  ·  another-extremely...  ·  short                                                          +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  zsh                                                                                                                +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ␣  leader ·  :  commands ·  n  new tab ·  s/v  split ·  q  quit
