crates/pane-tui/src/ui/snapshots/pane__ui__tests_workspace_bar__ws_bar_narrow_terminal.snap
---
source: crates/pane-tui/src/ui/tests_workspace_bar.rs
expression: output
---
╭──────────────────────────────────────╮
│  alpha  ·  beta                   +  │
╰──────────────────────────────────────╯
╭──────────────────────────────────────╮
│  zsh                              +  │
│ ──────────────────────────────────── │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
╰──────────────────────────────────────╯
  ␣  leader ·  :  commands ·  n  new tab
