crates/pane-tui/src/ui/snapshots/pane__ui__tests_workspace_bar__ws_bar_nerd_font_home_icon.snap
---
source: crates/pane-tui/src/ui/tests_workspace_bar.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│    ·  dev                                                                                                        +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
                              ╭────────────────────────────────────────────────────────────────────────────────────────╮
                              │  zsh                                                                                +  │
                              │ ────────────────────────────────────────────────────────────────────────────────────── │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              ╰────────────────────────────────────────────────────────────────────────────────────────╯
  /  search ·  Enter  open ·  n  new ·  :  commands ·  q  quit
