crates/pane-tui/src/ui/snapshots/pane__ui__tests_workspace_bar__ws_bar_overflow_active_last.snap
---
source: crates/pane-tui/src/ui/tests_workspace_bar.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  ws1  ·  ws2  ·  ws3  ·  ws4  ·  ws5  ·  ws6  ·  ws7  ·  ws8  ·  ws9  ·  ws10                                     +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  zsh                                                                                                                +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ␣  leader ·  :  commands ·  n  new tab ·  s/v  split ·  q  quit
